--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,4 +12,4 @@
 [defaults]
 remote_user = ansible
 forks = 30
-private_key_file = /etc/ansible/id_rsa
+private_key_file = /etc/ansible/.ssh/id_rsa
