--- a/roles/proxmox-reconfigure-vm/tasks/main.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/main.yaml
@@ -10,5 +10,5 @@
 
 - name: List vm_name
   debug:
-    msg: "{{ item }} {{ vm_name.item }}"
+    msg: "{{ item }} {{ vm_name[item] }}"
   loop: "{{ vm_name.keys() | list }}"
