--- a/roles/proxmox-reconfigure-vm/tasks/main.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/main.yaml
@@ -20,7 +20,8 @@
 
 # Divides the next section for if disks are requested
 - name: Add disks
-  import_task: block_storage.yaml
+  import_tasks:
+    file: block_storage.yaml
   loop: "{{ guest_hosts.keys() }}"
   loop_control:
     loop_var: "guest_host"
