Fixing varible types

--- a/roles/proxmox-reconfigure-vm/tasks/main.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/main.yaml
@@ -4,6 +4,7 @@
   shell: "qm list | awk '{print $2, $1}'"
   register: vm_list
   delegate_to: "{{ groups.proxmox_servers[0] }}"
+  run_once: true
 
 # vm_name is dictionary of vm_list so that I can do vm_name.guest_hosts.name and it return the vmid
 - name: Load varible with results from qm list
@@ -11,6 +12,7 @@
     vm_name: "{{ vm_name | combine( {item.split(' ')[0]: item.split(' ')[1]} ) }}"
   loop: "{{ vm_list.stdout_lines }}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
+  run_once: true
 
 # Reconfigures the VMs
 - name: Reconfigure VM(s) CPU and RAM
