--- a/roles/proxmox-reconfigure-vm/tasks/main.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/main.yaml
@@ -14,6 +14,10 @@
   delegate_to: "{{ groups.proxmox_servers[0] }}"
   run_once: true
 
+- name: Display vm_guest
+  debug:
+    msg: "{{ vm_name }}"
+
 # Reconfigures the VMs
 - name: Reconfigure VM(s) CPU and RAM
   shell: "qm set {{ vm_name[guest_hosts[item.name]] }} --sockets {{ guest_hosts[item.sockets] }} --memory {{ guest_hosts[item.memory] }} --cores {{ guest_hosts[item.cores] }}"
