Removing .keys() from a list of dicts

--- a/roles/proxmox-reconfigure-vm/tasks/main.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/main.yaml
@@ -24,7 +24,7 @@
 - name: Add disks
   include_tasks:
     file: block_storage.yaml
-  loop: "{{ guest_hosts.keys() }}"
+  loop: "{{ guest_hosts }}"
   loop_control:
     loop_var: "guest_host"
   
