--- a/roles/proxmox-reconfigure-vm/tasks/block_storage.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/block_storage.yaml
@@ -1,7 +1,7 @@
 ---
 # vm_config is a list of the different configs
 - name: Register list of the VM configuration
-  shell: "qm config {{ item }}"
+  shell: "qm config {{ guest_host }}"
   register: vm_config
   delegate_to: "{{ groups.proxmox_servers[0] }}"
 
