--- a/roles/proxmox-reconfigure-vm/tasks/block_storage.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/block_storage.yaml
@@ -1,7 +1,7 @@
----
+--- 
 # vm_config is a list of the different configs
 - name: Register list of the VM configuration
-  shell: "qm config {{ vm_name.guest_host.name }}"
+  shell: "qm config {{ vm_name[guest_host['name']] }}"
   register: vm_config
   delegate_to: "{{ groups.proxmox_servers[0] }}"
 
@@ -16,6 +16,7 @@
   set_fact:
     disk_count: "{{ disk_count | int + 1}}"
   when: "{{ disks_count | string is in item and 'lvm' is in item }}"
+  loop: "{{ guest_host.hdd }}"
   delegate_to: "ihs-ansible-01"
 
 # Combine the disks that are being created with their ID number that will generate (it's a serial generation so I was able to determine what the next one is because it's just disk_ID +1 starting at 0 for the boot disk )
