--- a/roles/proxmox-reconfigure-vm/tasks/block_storage.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/block_storage.yaml
@@ -29,6 +29,6 @@
 
 # Create disks
 - name: Create disks
-  shell: "pvesm alloc local-lvm {{ vm_name[guest_hosts[item].name] }} '' {{ item.1 }}"
+  shell: "pvesm alloc local-lvm {{ vm_name[guest_hosts[name]] }} '' {{ item.1 }}"
   loop: "{{ disks_with_int }}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
