--- a/proxmox-reconfigure-test-vm.yaml
+++ b/proxmox-reconfigure-test-vm.yaml
@@ -1,5 +1,5 @@
-- name: Add ceph VMs
-  hosts: proxmox_servers
+- name: Add test VMs
+  hosts: ihs-test-host-01.ihs.org
   become: yes
   gather_facts: no
   vars:
