--- a/roles/proxmox-clone-vm/tasks/main.yaml
+++ b/roles/proxmox-clone-vm/tasks/main.yaml
@@ -14,5 +14,6 @@
   delegate_to: "ihs-ansible-01"
 
 - name: Clone VM
-  shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ ansible_ID_start }} --name {{ guest_host }}"
+  shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ ansible_ID_start }} --name {{ item }}"
+  loop: "{{ ansible_play_hosts }}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
