Update create cph vms and rename old proxmox reconfigure

--- a/proxmox-create-ceph-vms.yaml
+++ b/proxmox-create-ceph-vms.yaml
@@ -1,4 +1,7 @@
 - name: Add ceph VMs
   hosts: ceph_servers
   become: yes
-  
+  tasks:
+   - name: Create the VMs
+     import_role:
+       name: proxmox-clone-vm
