--- a/roles/proxmox-clone-vm/tasks/main.yaml
+++ b/roles/proxmox-clone-vm/tasks/main.yaml
@@ -4,19 +4,19 @@
   register: all_VMIDs
   delegate_to: "{{ groups.proxmox_servers[0] }}"
 
-- name: Check next VMID in list
-  run_once: true
-  loop: "{{ all_VMIDs.stdout_lines }}"
-  set_fact:
-    ansible_ID_start: "{{ ansible_ID_start | int + 1}}"
-#  until:  item  != ansible_ID_start
-  until: item is not in all_VMIDs
-  retries: 1000
-  delay: 1
-  delegate_to: "ihs-ansible-01"
+- name: Breaking into block
+  block:
+  - name: Check next VMID in list
+    loop: "{{ all_VMIDs.stdout_lines }}"
+    set_fact:
+      ansible_ID_start: "{{ ansible_ID_start | int + 1}}"
+#    until:  item  != ansible_ID_start
+    until: item is not in all_VMIDs
+    retries: 1000
+    delay: 1
+    delegate_to: "ihs-ansible-01"
 
-- name: Clone VM
-  run_once: true
-  shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ ansible_ID_start }} --name {{ item }}"
+  - name: Clone VM
+    shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ ansible_ID_start }} --name {{ item }}"
+    delegate_to: "{{ groups.proxmox_servers[0] }}"
   loop: "{{ ansible_play_hosts }}"
-  delegate_to: "{{ groups.proxmox_servers[0] }}"
