--- a/roles/proxmox-clone-vm/tasks/clone_vm.yaml
+++ b/roles/proxmox-clone-vm/tasks/clone_vm.yaml
@@ -3,17 +3,24 @@
   shell: "qm list | awk {'print $1'}"
   register: all_VMIDs
   delegate_to: "{{ groups.proxmox_servers[0] }}"
-  
-- name: Check next VMID in list
-  loop: "{{ all_VMIDs.stdout_lines }}"
+
+- name: Check if VMID is avalible
+  loop: "{{ guest_host }}"
   set_fact:
-    ansible_ID_start: "{{ ansible_ID_start | int + 1}}"
-#  until:  item  != ansible_ID_start
-  until: item is not in all_VMIDs
-  retries: 1000
-  delay: 1
-  delegate_to: "ihs-ansible-01"
+    vmid_start: {{ vmid_start | int + 1 }}
+    vmid_list: [vmid_list + [vmid_start]]
+  when: vmid_start is not in all_VMIDs
+  until: "{{ ansible_play_hosts_all | length }}" == "{{ vmid_list | length }}"
+
+#- name: Check next VMID in list
+#  loop: "{{ all_VMIDs.stdout_lines }}"
+#  set_fact:
+#    vmid_start: "{{ vmid_start | int + 1}}"
+##  until:  item  != ansible_ID_start
+#  until: item is not in all_VMIDs
+#  delegate_to: "ihs-ansible-01"
 
 - name: Clone VM
-  shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ ansible_ID_start }} --name {{ guest_host }}"
+  shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ item.1 }} --name {{ item.0 }}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
+  loop: {{ ansible_play_hosts_all | zip(vmid_list) }}
