--- a/roles/proxmox-clone-vm/tasks/clone_vm.yaml
+++ b/roles/proxmox-clone-vm/tasks/clone_vm.yaml
@@ -8,9 +8,9 @@
   loop: "{{ guest_host }}"
   set_fact:
     vmid_start: {{ vmid_start | int + 1 }}
-    vmid_list: [vmid_list + [vmid_start]]
+    vmid_list: "{{ vmid_list + [vmid_start]}}"
   when: vmid_start is not in all_VMIDs
-  until: "{{ ansible_play_hosts_all | length }}" == "{{ vmid_list | length }}"
+  until: "{{ ansible_play_hosts_all | length == vmid_list | length }}"
 
 #- name: Check next VMID in list
 #  loop: "{{ all_VMIDs.stdout_lines }}"
