--- a/roles/proxmox-clone-vm/tasks/clone_vm.yaml
+++ b/roles/proxmox-clone-vm/tasks/clone_vm.yaml
@@ -9,7 +9,7 @@
   set_fact:
     vmid_start: "{{ vmid_start | int + 1 }}"
     vmid_list: "{{ vmid_list + [vmid_start]}}"
-  when: vmid_start is not in all_VMIDs
+  when: vmid_start is in all_VMIDs
   until: "{{ ansible_play_hosts_all | length == vmid_list | length }}"
 
 #- name: Check next VMID in list
@@ -20,7 +20,11 @@
 #  until: item is not in all_VMIDs
 #  delegate_to: "ihs-ansible-01"
 
+- name:
+  debug: 
+    msg: "{{ ansible_play_hosts_all | zip(vmid_list) }}"
+
 - name: Clone VM
   shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ item.1 }} --name {{ item.0 }}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
-  loop: "{{ ansible_play_hosts_all  | zip(vmid_list) }}"
+  loop: "{{ ansible_play_hosts_all | zip(vmid_list) }}"
