--- a/roles/proxmox-clone-vm/tasks/clone_vm.yaml
+++ b/roles/proxmox-clone-vm/tasks/clone_vm.yaml
@@ -4,21 +4,21 @@
   register: all_VMIDs
   delegate_to: "{{ groups.proxmox_servers[0] }}"
 
-- name: Check if VMID is avalible
-  loop: "{{ ansible_play_hosts_all }}"
-  set_fact:
-    vmid_start: "{{ vmid_start | int + 1 }}"
-    vmid_list: "{{ vmid_list + [vmid_start]}}"
-  when: vmid_start is in all_VMIDs
-  until: "{{ ansible_play_hosts_all | length == vmid_list | length }}"
-
-#- name: Check next VMID in list
-#  loop: "{{ all_VMIDs.stdout_lines }}"
+#- name: Check if VMID is avalible
+#  loop: "{{ ansible_play_hosts_all }}"
 #  set_fact:
-#    vmid_start: "{{ vmid_start | int + 1}}"
-##  until:  item  != ansible_ID_start
-#  until: item is not in all_VMIDs
-#  delegate_to: "ihs-ansible-01"
+#    vmid_start: "{{ vmid_start | int + 1 }}"
+#    vmid_list: "{{ vmid_list + [vmid_start]}}"
+#  when: vmid_start is in all_VMIDs
+#  until: "{{ ansible_play_hosts_all | length == vmid_list | length }}"
+
+- name: Check next VMID in list
+  loop: "{{ all_VMIDs.stdout_lines }}"
+  set_fact:
+    vmid_start: "{{ vmid_start | int + 1}}"
+#  until:  item  != ansible_ID_start
+  until: item is not in all_VMIDs
+  delegate_to: "ihs-ansible-01"
 
 - name:
   debug: 
