Update to use dict to give unique VMID`:;

--- a/roles/proxmox-clone-vm/tasks/main.yaml
+++ b/roles/proxmox-clone-vm/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Clone the VMs
-  loop: "{{ ansible_play_hosts }}"
-  loop_control:
-    loop_var: "guest_host"
+#  loop: "{{ ansible_play_hosts }}"
+#  loop_control:
+#    loop_var: "guest_host"
   include_tasks: "clone_vm.yaml"
-  when: inventory_hostname == guest_host
+#  when: inventory_hostname == guest_host
