--- a/roles/proxmox-clone-vm/tasks/clone_vm.yaml
+++ b/roles/proxmox-clone-vm/tasks/clone_vm.yaml
@@ -5,12 +5,12 @@
   delegate_to: "{{ groups.proxmox_servers[0] }}"
 
 - name: Check if VMID is avalible
-  loop: "{{ ansible_play_hosts_all }}"
+  loop: "{{ ansible_play_hosts }}"
   set_fact:
     vmid_start: "{{ vmid_start | int + 1 }}"
-#    vmid_list: "{{ vmid_list + [vmid_start]}}"
-  when: "{{ vmid_start | string is in all_VMIDs.stdout }}"
-  until: "{{ ansible_play_hosts_all | length == vmid_list | length }}"
+    all_VMIDs: "{{ all_VMIDs | combine( {vmid_start: item} ) }}"
+  when: "{{ vmid_start | string is not in all_VMIDs.stdout }}"
+#  until: "{{ ansible_play_hosts_all | length == vmid_list | length }}"
 
 #- name: Check next VMID in list
 #  loop: "{{ all_VMIDs.stdout_lines }}"
@@ -21,6 +21,7 @@
 #  delegate_to: "ihs-ansible-01"
 
 - name: Clone VM
-  shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ item.1 }} --name {{ item.0 }}"
+  shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ all_VMIDs.stdout }} --name {{ all_VMIDs.item }}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
-  loop: "{{ ansible_play_hosts_all | zip(vmid_list) }}"
+  loop: "{{ all_VMIDs.keys() | list }}"
+  when: all_VMIDs.item is in ansible_play_hosts
