--- a/roles/proxmox-clone-vm/tasks/clone_vm.yaml
+++ b/roles/proxmox-clone-vm/tasks/clone_vm.yaml
@@ -1,8 +1,12 @@
 ---
 - name: Retrieve every VMID
-  shell: "qm list | awk {'print $1'}"
+  shell: "qm list | awk {'print $1 /" /" $2'}"
   register: all_VMIDs
   delegate_to: "{{ groups.proxmox_servers[0] }}"
+
+- name: Make dict of VMIDs with hostnames
+  set_fact:
+    all_VMIDs_dict: {{ all_VMIDs_dict | combine() }}
 
 - name: Check if VMID is avalible
   loop: "{{ ansible_play_hosts }}"
@@ -21,7 +25,7 @@
 #  delegate_to: "ihs-ansible-01"
 
 - name: Clone VM
-  shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ all_VMIDs.stdout }} --name {{ all_VMIDs.item }}"
+  shell: "qm clone {{ rocky_8_cloud_init_vmid }} {{ all_VMIDs.stdout }} --name {{ all_VMIDs[item] }}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
-  loop: "{{ all_VMIDs.keys() | list }}"
-  when: all_VMIDs.item is in ansible_play_hosts
+  loop: "{{ all_VMIDs.stdout_lines }}"
+  when: all_VMIDs[item] is in ansible_play_hosts
