--- a/roles/proxmox-clone-vm/tasks/main.yaml
+++ b/roles/proxmox-clone-vm/tasks/main.yaml
@@ -1,4 +1,35 @@
 ---
+- name: Retrieve every VMID
+  shell: "qm list | awk {'print $1, $2'}"
+  register: all_VMIDs
+  delegate_to: "{{ groups.proxmox_servers[0] }}"
+
+- name: Make dict of VMIDs with hostnames
+  set_fact:
+    all_VMIDs_dict: "{{ all_VMIDs_dict | combine({item.split(' ')[0]: item.split(' ')[1]} ) }}"
+  loop: "{{ all_VMIDs.stdout_lines }}"
+
+- name: Geneate unique ID for each VM into a list
+  set_fact:
+    ID_list: "{{ ID_list + [vmid_start] }}"
+    vmid_start: "{{ vmid_start | int + 1}}"
+  until: "{{ ID_list | length == ansible_play_hosts | length}}"
+  loop: "{{ ansible_play_hosts }}"
+#  when: "{{ vmid_start | string is not in all_VMIDs_dict.keys() }}"
+
+- name: Display ID_list and ansible_play_hosts
+  run_once: true
+  debug:
+    msg: "{{ item }}"
+  loop:
+    - "{{ ID_list }}"
+    - "{{ ansible_play_hosts }}"
+
+- name: Assign unique ID for each VM
+  set_fact:
+    all_VMIDs_dict: "{{ all_VMIDs_dict | combine( {item.0: item.1} ) }}"
+  loop: "{{ ID_list | zip(ansible_play_hosts) }}"
+
 - name: Clone the VMs
 #  loop: "{{ ansible_play_hosts }}"
 #  loop_control:
