--- a/proxmox-remove-ceph-vms.yaml
+++ b/proxmox-remove-ceph-vms.yaml
@@ -3,7 +3,7 @@
   become: yes
   gather_facts: no
   vars:
-    - guest_host: inventory_hostname
+    - guest_host: "{{ inventory_hostname }}"
   tasks:
     - name: Loop through ansible_hosts
       include_role:
