--- a/roles/proxmox-reconfigure-vm/tasks/block_storage.yaml
+++ b/roles/proxmox-reconfigure-vm/tasks/block_storage.yaml
@@ -32,3 +32,8 @@
   shell: "pvesm alloc local-lvm {{ vm_name[guest_host['name']] }} '' {{ item.1 }}"
   loop: "{{ disks_with_int }}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
+
+# Attch the disk to the VM
+- name: Attach the disk
+  shell: "qm set {{ vm_name[guest_host['name']]] }} --scsihw virtio-scsi-pci --scsi1 local-lvm:vm-{{ vm_name[guest_host['name']]] }}-disk-{{ item.0 }}"
+  loop: "{{ disks_with_int }}"
