--- a/roles/proxmox-start-vm/tasks/main.yaml
+++ b/roles/proxmox-start-vm/tasks/main.yaml
@@ -1,9 +1,11 @@
 ---
 - name: Register the results of qm list
+  delegate_to: "{{ groups.proxmox_servers[0] }}"
   shell: "qm list | awk '{print $2, $1}'"
   register: vm_list
 
 - name: Load varible with results from qm list
+  delegate_to: "{{ groups.proxmox_servers[0] }}"
   set_fact:
     vm_name: "{{ vm_name | combine( {item.split(' ')[0]: item.split(' ')[1]} ) }}"
   loop: "{{ vm_list.stdout_lines }}"
@@ -18,6 +20,7 @@
   delegate_to: "{{ groups.proxmox_servers[0] }}"
 
 - name: Reboot VM to update DNS
+  delegate_to: "{{ groups.proxmox_servers[0] }}"
   shell: "qm reboot {{ vm_name[item] }}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
 
