--- a/roles/proxmox-start-vm/tasks/main.yaml
+++ b/roles/proxmox-start-vm/tasks/main.yaml
@@ -11,7 +11,7 @@
   loop: "{{ vm_list.stdout_lines }}"
 
 - name: Power on VM
-  shell: "qm start {{ vm_name[inventory_host]}}"
+  shell: "qm start {{ vm_name[inventory_hostname]}}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
   
 - name: Wait for VM to fully boot
@@ -21,7 +21,7 @@
 
 - name: Reboot VM to update DNS
   delegate_to: "{{ groups.proxmox_servers[0] }}"
-  shell: "qm reboot {{ vm_name[inventory_host] }}"
+  shell: "qm reboot {{ vm_name[inventory_hostname] }}"
   delegate_to: "{{ groups.proxmox_servers[0] }}"
 
 - name: Wait for VM to start
