Correct import-task to be based off the name of a task

--- a/proxmox-create-ceph-vms.yaml
+++ b/proxmox-create-ceph-vms.yaml
@@ -3,4 +3,4 @@
 - name: Configure the ceph vms
   import_playbook: proxmox-configure-ceph-vms.yaml
 - name: Start ceph vms
-  import_playbook: Start the ceph vms
+  import_playbook: proxmox-start-ceph-vms.yaml
