--- a/roles/proxmox-clone-vm/tasks/increment_vmid_counter.yaml
+++ b/roles/proxmox-clone-vm/tasks/increment_vmid_counter.yaml
@@ -7,7 +7,7 @@
 
 # Calls itself
 - name: Recheck vmid
-  when: "{{ vmid_start | string is not in all_VMIDs_dict.keys }}"
+  when: "{{ vmid_start | string is not in all_VMIDs_dict.keys() }}"
   include_tasks: increment_vmid_counter.yaml
 
 # Appends the vmid to ID_list
@@ -22,6 +22,6 @@
 
 # Calls itself
 - name: Recheck vmid
-  when: "{{ vmid_start | string is not in all_VMIDs_dict.keys }}"
+  when: "{{ vmid_start | string is not in all_VMIDs_dict.keys() }}"
   include_tasks: increment_vmid_counter.yaml
 
