--- a/roles/proxmox-clone-vm/tasks/increment_vmid_counter.yaml
+++ b/roles/proxmox-clone-vm/tasks/increment_vmid_counter.yaml
@@ -12,6 +12,7 @@
 
 # Appends the vmid to ID_list
 - name: Apend ID_list
+  when: "{{ vmid_start | string is not in all_VMIDs_dict.keys() }}"
   set_fact:
     ID_list: "{{ ID_list + [vmid_start] }}"
 
@@ -22,6 +23,6 @@
 
 # Calls itself
 - name: Recheck vmid
-  when: "{{ vmid_start | string is not in all_VMIDs_dict.keys() }}"
+  when: "{{ vmid_start | string is in all_VMIDs_dict.keys() }}"
   include_tasks: increment_vmid_counter.yaml
 
