--- a/roles/proxmox-clone-vm/tasks/increment_vmid_counter.yaml
+++ b/roles/proxmox-clone-vm/tasks/increment_vmid_counter.yaml
@@ -11,6 +11,13 @@
   set_fact:
     ID_list: "{{ ID_list + [vmid_start] }}"
 
+- name: Display VMID and ID_list
+  debug:
+    msg: "{{ vmid_start }}"
+  loop:
+    - "{{ID_list }}"
+  
+
 # Zips the VMIDs with the hosts
 - name: Assign unique ID for each VM
   set_fact:
