--- a/roles/ceph-add-hosts/tasks/main.yaml
+++ b/roles/ceph-add-hosts/tasks/main.yaml
@@ -46,6 +46,6 @@
 
 - name: Assign daemons according to the label
   run_once: true
-  delegate_to: "{{ groups.ceph_admins[0]"
+  delegate_to: "{{ groups.ceph_admins[0] }}" 
   shell: "cephadm shell -- ceph orch apply {{ item[1] }} label:{{ item[1] }}"
   loop: "{{ roles_with_nodes }}"
