--- a/roles/proxmox-clone-vm/tasks/increment_vmid_counter.yaml
+++ b/roles/proxmox-clone-vm/tasks/increment_vmid_counter.yaml
@@ -1,7 +1,9 @@
 ---
 # Checks if the vmid is in use, if not then it will increment and then call itself
 - name: Is vmid "{{ vmid_start }}" avalible
-  when: vmid_start | string is in all_VMIDs_dict.keys()
+  when:
+    - vmid_start | string is in all_VMIDs_dict.keys()
+    - vmid_start | string is in ID_list
   set_fact:
     vmid_start: "{{ vmid_start | int + 1 }}"
 
@@ -10,14 +12,9 @@
   when: "{{ vmid_start | string is not in all_VMIDs_dict.keys() }}"
   set_fact:
     ID_list: "{{ ID_list + [vmid_start] }}"
-
-# Zips the VMIDs with the hosts
-- name: Assign unique ID for each VM
-  set_fact:
-    all_VMIDs_dict: "{{ all_VMIDs_dict | combine( {item.0: item.1} ) }}"
-  loop: "{{ ID_list | zip(ansible_play_hosts) }}"
+    vmid_start: "{{ vmid_start | int + 1 }}"
 
 # Calls itself
 - name: Recheck vmid
-  when: "{{ vmid_start | string is in all_VMIDs_dict.keys() }}"
+  when: vmid_start | string is in all_VMIDs_dict.keys()
   include_tasks: increment_vmid_counter.yaml
