--- a/roles/ceph-add-hosts/tasks/main.yaml
+++ b/roles/ceph-add-hosts/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Fetch admin ssh key
   run_once: true
-  delegate_to: "{{ groups.ceph_admin[0] }}"
+  delegate_to: "{{ groups.ceph_admins[0] }}"
   fetch:
     src: '/etc/ceph/ceph.pub'
     dest: '/tmp/{{ groups.ceph_admins[0] }}_ceph_public-key.pub'
