--- a/roles/ceph-boostrap-managers/vars/main.yaml
+++ b/roles/ceph-boostrap-managers/vars/main.yaml
@@ -6,6 +6,6 @@ commands:
   - "{{ cephadm_path }} install"
   - "{{ cephadm_path }} bootstrap --mon-ip {{ ansible_default_ipv4.address }} --allow-fqdn-hostname>/tmp/password"
   - "{{ cephadm_path }} shell -- ceph mgr module enable balancer"
-  - "{{ cephadm_path }}` shell -- ceph balancer on"
+  - "{{ cephadm_path }} shell -- ceph balancer on"
   - "{{ cephadm_path }} shell -- ceph balancer mode upmap"
   - "{{ cephadm_path }} shell -- ceph telemetry enable channel all"
