Commenting out issue causing module

--- a/roles/ceph-add-hosts/tasks/main.yaml
+++ b/roles/ceph-add-hosts/tasks/main.yaml
@@ -44,8 +44,8 @@
   shell: "cephadm shell -- ceph orch host label add {{ item[0] }} {{ item[1]}}"
   loop: "{{ roles_with_nodes }}"
 
-- name: Assign daemons according to the label
-  run_once: true
-  delegate_to: "{{ groups.ceph_admins[0] }}" 
-  shell: "cephadm shell -- ceph orch apply {{ item }} label:{{ item }}"
-  loop: "{{ roles_with_nodes_dict.keys }}"
+#- name: Assign daemons according to the label
+#  run_once: true
+#  delegate_to: "{{ groups.ceph_admins[0] }}" 
+#  shell: "cephadm shell -- ceph orch apply {{ item }} label:{{ item }}"
+#  loop: "{{ roles_with_nodes_dict.keys }}"
