--- a/roles/ceph-add-hosts/tasks/main.yaml
+++ b/roles/ceph-add-hosts/tasks/main.yaml
@@ -44,14 +44,14 @@
   shell: "cephadm shell -- ceph orch host label add {{ item[0] }} {{ item[1]}}"
   loop: "{{ roles_with_nodes }}"
 
-- name: Assign daemons according to the label
-  run_once: true
-  delegate_to: "{{ groups.ceph_admins[0] }}" 
-  shell: "cephadm shell -- ceph orch apply {{ item }} label:{{ item }}"
-  loop: "{{ roles_with_nodes_dict.keys }}"
+#- name: Assign daemons according to the label
+#  run_once: true
+#  delegate_to: "{{ groups.ceph_admins[0] }}" 
+#  shell: "cephadm shell -- ceph orch apply {{ item }} label:{{ item }}"
+#  loop: "{{ roles_with_nodes_dict.keys }}"
  
-- name: Assign daemons according to the label with secific names and their IDs
-  run_once: true
-  delegate_to: "{{ groups.ceph_admins[0] }}" 
-  shell: "cephadm shell -- ceph orch apply {{ item.0 }} label:{{ item.0 }}"
-  loop: "{{ roles_with_nodes_and_ids_dict.keys }}"
+#- name: Assign daemons according to the label with secific names and their IDs
+#  run_once: true
+#  delegate_to: "{{ groups.ceph_admins[0] }}" 
+#  shell: "cephadm shell -- ceph orch apply {{ item.0 }} label:{{ item.0 }}"
+#  loop: "{{ roles_with_nodes_and_ids_dict.keys }}"
