--- a/roles/ceph-add-hosts/tasks/main.yaml
+++ b/roles/ceph-add-hosts/tasks/main.yaml
@@ -55,3 +55,8 @@
 #  delegate_to: "{{ groups.ceph_admins[0] }}" 
 #  shell: "cephadm shell -- ceph orch apply {{ item.0 }} label:{{ item.0 }}"
 #  loop: "{{ roles_with_nodes_and_ids_dict.keys }}"
+
+- name: Check on disks are registered
+  include_tasks: "chech-ceph-disks.yaml"
+  delay: 5
+  poll: 1800
